--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html>
   <head>
     <script src="dist/build.js"></script>
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.2.4/foundation.min.css" />
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,300i,400,400i,500,700" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="https://s3-us-west-2.amazonaws.com/cdn.streamlabs.com/slobs/css/app.css" />
   </head>
   <body>
     <div id="app"></div>
