--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <script src="dist/build.js"></script>
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.2.4/foundation.min.css" />
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,300i,400,400i,500,700" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="https://s3-us-west-2.amazonaws.com/cdn.streamlabs.com/slobs/css/app.css" />
+    <link rel="stylesheet" type="text/css" href="app/twitchalerts.css" />
+    <script src="https://use.fontawesome.com/4c35f8aae4.js"></script>
   </head>
   <body>
     <div id="app"></div>
