--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
   <head>
     <script src="dist/build.js"></script>
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.2.4/foundation.min.css" />
-    <link href="https://fonts.googleapis.com/css?family=Roboto:300,300i,400,400i,500,700" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="app/twitchalerts.css" />
-    <script src="https://use.fontawesome.com/4c35f8aae4.js"></script>
+    <link rel="stylesheet" type="text/css" href="public/foundation.min.css" />
+    <link href="public/roboto.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="public/twitchalerts.css" />
+    <script src="public/fontawesome.js"></script>
   </head>
   <body>
     <div id="app"></div>
