Load fontawesome locally

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" type="text/css" href="public/foundation.min.css" />
     <link href="public/roboto.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="public/twitchalerts.css" />
-    <script src="public/fontawesome.js"></script>
+    <link rel="stylesheet" type="text/css" href="public/font-awesome-4.7.0/css/font-awesome.min.css" />
     <script src="dist/build.js"></script>
   </head>
   <body>
