Change from dist to build

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link href="public/roboto.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="public/twitchalerts.css" />
     <link rel="stylesheet" type="text/css" href="public/font-awesome-4.7.0/css/font-awesome.min.css" />
-    <script src="dist/build.js"></script>
+    <script src="build/slobs.js"></script>
   </head>
   <body>
     <div id="app"></div>
