rename public/ to vendor/ to indiciate they are 3rd party assets also, this should help with github language statistics

--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" type="text/css" href="public/foundation.min.css" />
-    <link href="public/roboto.css" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="public/twitchalerts.css" />
-    <link rel="stylesheet" type="text/css" href="public/font-awesome-4.7.0/css/font-awesome.min.css" />
+    <link rel="stylesheet" type="text/css" href="vendor/foundation.min.css" />
+    <link href="vendor/roboto.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="vendor/twitchalerts.css" />
+    <link rel="stylesheet" type="text/css" href="vendor/font-awesome-4.7.0/css/font-awesome.min.css" />
     <script src="bundles/renderer.js"></script>
   </head>
   <body>
