--- a/test/screentest/preview.html
+++ b/test/screentest/preview.html
@@ -12,7 +12,7 @@
 
     <div v-for="(filter, paramName) of state.config.configs" class="filter">
       <h3>{{ paramName }}</h3>
-      <label v-for="(filterParam, ind) of filter">
+      <label v-for="(filterParam.options, ind) of filter">
         <input type="checkbox" v-model="filters[paramName][ind]">
         {{ JSON.stringify(filterParam) }}
       </label>
@@ -28,9 +28,12 @@
   <div class="regressions">
     <div
         class="regression"
+        :class="{'regression-new': regression.isNew }"
         v-for="(regression, ind) of state.regressions"
         v-if="canShow(regression)"
     >
+
+      <span v-if="regression.isNew" class="new">NEW</span>
       {{ ind }}
       <pre>({{ JSON.stringify(regression.params) }})</pre>
       <table width="100%">
@@ -41,12 +44,12 @@
             </a>
           </td>
           <td >
-            <a :href="'../../' + regression.baseImage"  target="_blank">
+            <a :href="'../../' + regression.baseImage"  target="_blank" v-if="!regression.isNew">
               <img :src="'../../' + regression.baseImage" >
             </a>
           </td>
           <td>
-            <a :href="'../../' + regression.diffImage"  target="_blank">
+            <a :href="'../../' + regression.diffImage"  target="_blank" v-if="!regression.isNew">
               <img :src="'../../' + regression.diffImage" >
             </a>
           </td>
@@ -58,7 +61,7 @@
 </div>
 
 <script>
-  const state = {"regressions":{"Editor with sources__0.png":{"name":"Editor with sources","baseImage":"test-dist/screentest/regression_testing_screenshots_example/Editor with sources__0.png","branchImage":"test-dist/screentest/regression_testing_screenshots/Editor with sources__0.png","diffImage":"test-dist/screentest/diff/Editor with sources__0.png","isNew":false,"params":{"resolution":{"width":1000,"height":700},"nightMode":true},"isChanged":true},"Editor with sources__1.png":{"name":"Editor with sources","baseImage":"test-dist/screentest/regression_testing_screenshots_example/Editor with sources__1.png","branchImage":"test-dist/screentest/regression_testing_screenshots/Editor with sources__1.png","diffImage":"test-dist/screentest/diff/Editor with sources__1.png","isNew":false,"params":{"resolution":{"width":1500,"height":900},"nightMode":true},"isChanged":true},"Editor with sources__2.png":{"name":"Editor with sources","baseImage":"test-dist/screentest/regression_testing_screenshots_example/Editor with sources__2.png","branchImage":"test-dist/screentest/regression_testing_screenshots/Editor with sources__2.png","diffImage":"test-dist/screentest/diff/Editor with sources__2.png","isNew":false,"params":{"resolution":{"width":1000,"height":700},"nightMode":false},"isChanged":true},"Editor with sources__3.png":{"name":"Editor with sources","baseImage":"test-dist/screentest/regression_testing_screenshots_example/Editor with sources__3.png","branchImage":"test-dist/screentest/regression_testing_screenshots/Editor with sources__3.png","diffImage":"test-dist/screentest/diff/Editor with sources__3.png","isNew":false,"params":{"resolution":{"width":1500,"height":900},"nightMode":false},"isChanged":true},"Editor without sources__0.png":{"name":"Editor without sources","baseImage":"test-dist/screentest/regression_testing_screenshots_example/Editor without sources__0.png","branchImage":"test-dist/screentest/regression_testing_screenshots/Editor without sources__0.png","diffImage":"test-dist/screentest/diff/Editor without sources__0.png","isNew":false,"params":{"resolution":{"width":1000,"height":700},"nightMode":true},"isChanged":true},"Editor without sources__1.png":{"name":"Editor without sources","baseImage":"test-dist/screentest/regression_testing_screenshots_example/Editor without sources__1.png","branchImage":"test-dist/screentest/regression_testing_screenshots/Editor without sources__1.png","diffImage":"test-dist/screentest/diff/Editor without sources__1.png","isNew":false,"params":{"resolution":{"width":1500,"height":900},"nightMode":true},"isChanged":true},"Editor without sources__2.png":{"name":"Editor without sources","baseImage":"test-dist/screentest/regression_testing_screenshots_example/Editor without sources__2.png","branchImage":"test-dist/screentest/regression_testing_screenshots/Editor without sources__2.png","diffImage":"test-dist/screentest/diff/Editor without sources__2.png","isNew":false,"params":{"resolution":{"width":1000,"height":700},"nightMode":false},"isChanged":true},"Editor without sources__3.png":{"name":"Editor without sources","baseImage":"test-dist/screentest/regression_testing_screenshots_example/Editor without sources__3.png","branchImage":"test-dist/screentest/regression_testing_screenshots/Editor without sources__3.png","diffImage":"test-dist/screentest/diff/Editor without sources__3.png","isNew":false,"params":{"resolution":{"width":1500,"height":900},"nightMode":false},"isChanged":true}},"totalScreens":8,"changedScreens":8,"newScreens":0,"config":{"baseBranch":"regression_testing_screenshots_example","dist":"test-dist/screentest","configs":{"resolution":[{"width":1000,"height":700},{"width":1500,"height":900}],"nightMode":[true,false]}},"configs":[{"resolution":{"width":1000,"height":700},"nightMode":true},{"resolution":{"width":1500,"height":900},"nightMode":true},{"resolution":{"width":1000,"height":700},"nightMode":false},{"resolution":{"width":1500,"height":900},"nightMode":false}],"branches":["regression_testing_screenshots","regression_testing_screenshots_example"]}
+  const state = {"regressions":{"Editor with sources__0.png":{"name":"Editor with sources","baseImage":"test-dist/screentest/regression_testing_screenshots_example/Editor with sources__0.png","branchImage":"test-dist/screentest/regression_testing_screenshots/Editor with sources__0.png","diffImage":"test-dist/screentest/diff/Editor with sources__0.png","isNew":false,"params":{"resolution":{"width":1000,"height":700},"nightMode":true},"isChanged":true},"Editor with sources__1.png":{"name":"Editor with sources","baseImage":"test-dist/screentest/regression_testing_screenshots_example/Editor with sources__1.png","branchImage":"test-dist/screentest/regression_testing_screenshots/Editor with sources__1.png","diffImage":"test-dist/screentest/diff/Editor with sources__1.png","isNew":false,"params":{"resolution":{"width":1500,"height":900},"nightMode":true},"isChanged":true},"Editor with sources__2.png":{"name":"Editor with sources","baseImage":"test-dist/screentest/regression_testing_screenshots_example/Editor with sources__2.png","branchImage":"test-dist/screentest/regression_testing_screenshots/Editor with sources__2.png","diffImage":"test-dist/screentest/diff/Editor with sources__2.png","isNew":false,"params":{"resolution":{"width":1000,"height":700},"nightMode":false},"isChanged":true},"Editor with sources__3.png":{"name":"Editor with sources","baseImage":"test-dist/screentest/regression_testing_screenshots_example/Editor with sources__3.png","branchImage":"test-dist/screentest/regression_testing_screenshots/Editor with sources__3.png","diffImage":"test-dist/screentest/diff/Editor with sources__3.png","isNew":false,"params":{"resolution":{"width":1500,"height":900},"nightMode":false},"isChanged":true},"Editor with the big amount of sources and scenes__0.png":{"name":"Editor with the big amount of sources and scenes","baseImage":"test-dist/screentest/regression_testing_screenshots_example/Editor with the big amount of sources and scenes__0.png","branchImage":"test-dist/screentest/regression_testing_screenshots/Editor with the big amount of sources and scenes__0.png","diffImage":"test-dist/screentest/diff/Editor with the big amount of sources and scenes__0.png","isNew":true,"params":{"resolution":{"width":1000,"height":700},"nightMode":true},"isChanged":false},"Editor with the big amount of sources and scenes__1.png":{"name":"Editor with the big amount of sources and scenes","baseImage":"test-dist/screentest/regression_testing_screenshots_example/Editor with the big amount of sources and scenes__1.png","branchImage":"test-dist/screentest/regression_testing_screenshots/Editor with the big amount of sources and scenes__1.png","diffImage":"test-dist/screentest/diff/Editor with the big amount of sources and scenes__1.png","isNew":true,"params":{"resolution":{"width":1500,"height":900},"nightMode":true},"isChanged":false},"Editor with the big amount of sources and scenes__2.png":{"name":"Editor with the big amount of sources and scenes","baseImage":"test-dist/screentest/regression_testing_screenshots_example/Editor with the big amount of sources and scenes__2.png","branchImage":"test-dist/screentest/regression_testing_screenshots/Editor with the big amount of sources and scenes__2.png","diffImage":"test-dist/screentest/diff/Editor with the big amount of sources and scenes__2.png","isNew":true,"params":{"resolution":{"width":1000,"height":700},"nightMode":false},"isChanged":false},"Editor with the big amount of sources and scenes__3.png":{"name":"Editor with the big amount of sources and scenes","baseImage":"test-dist/screentest/regression_testing_screenshots_example/Editor with the big amount of sources and scenes__3.png","branchImage":"test-dist/screentest/regression_testing_screenshots/Editor with the big amount of sources and scenes__3.png","diffImage":"test-dist/screentest/diff/Editor with the big amount of sources and scenes__3.png","isNew":true,"params":{"resolution":{"width":1500,"height":900},"nightMode":false},"isChanged":false},"Editor without sources__0.png":{"name":"Editor without sources","baseImage":"test-dist/screentest/regression_testing_screenshots_example/Editor without sources__0.png","branchImage":"test-dist/screentest/regression_testing_screenshots/Editor without sources__0.png","diffImage":"test-dist/screentest/diff/Editor without sources__0.png","isNew":false,"params":{"resolution":{"width":1000,"height":700},"nightMode":true},"isChanged":true},"Editor without sources__1.png":{"name":"Editor without sources","baseImage":"test-dist/screentest/regression_testing_screenshots_example/Editor without sources__1.png","branchImage":"test-dist/screentest/regression_testing_screenshots/Editor without sources__1.png","diffImage":"test-dist/screentest/diff/Editor without sources__1.png","isNew":false,"params":{"resolution":{"width":1500,"height":900},"nightMode":true},"isChanged":true},"Editor without sources__2.png":{"name":"Editor without sources","baseImage":"test-dist/screentest/regression_testing_screenshots_example/Editor without sources__2.png","branchImage":"test-dist/screentest/regression_testing_screenshots/Editor without sources__2.png","diffImage":"test-dist/screentest/diff/Editor without sources__2.png","isNew":false,"params":{"resolution":{"width":1000,"height":700},"nightMode":false},"isChanged":true},"Editor without sources__3.png":{"name":"Editor without sources","baseImage":"test-dist/screentest/regression_testing_screenshots_example/Editor without sources__3.png","branchImage":"test-dist/screentest/regression_testing_screenshots/Editor without sources__3.png","diffImage":"test-dist/screentest/diff/Editor without sources__3.png","isNew":false,"params":{"resolution":{"width":1500,"height":900},"nightMode":false},"isChanged":true}},"totalScreens":12,"changedScreens":8,"newScreens":4,"config":{"baseBranch":"regression_testing_screenshots_example","dist":"test-dist/screentest","configs":{"resolution":[{"width":1000,"height":700},{"width":1500,"height":900}],"nightMode":[true,false]}},"configs":[{"resolution":{"width":1000,"height":700},"nightMode":true},{"resolution":{"width":1500,"height":900},"nightMode":true},{"resolution":{"width":1000,"height":700},"nightMode":false},{"resolution":{"width":1500,"height":900},"nightMode":false}],"branches":["regression_testing_screenshots","regression_testing_screenshots_example"]}
   var app = new Vue({
     el: '#app',
     data() {
@@ -83,7 +86,7 @@
 
         for (const paramName in regression.params) {
           const paramValue = regression.params[paramName];
-          const configVariations = this.state.config.configs[paramName];
+          const configVariations = this.state.config.configs[paramName].options;
           for (let ind = 0; ind < configVariations.length; ind++ ) {
             if (
               JSON.stringify(paramValue) === JSON.stringify(configVariations[ind]) &&
@@ -151,6 +154,18 @@
     display:block;
     width:100%;
     cursor: pointer;
+  }
+
+  span.new {
+    background-color: #2faf93;
+    color: white;
+    border-radius: 3px;
+    padding: 2px 4px;
+  }
+
+  .regression-new img {
+    display: inline;
+    width: auto;
   }
 </style>
 
