--- a/test/screentest/preview-tpl.html
+++ b/test/screentest/preview-tpl.html
@@ -41,18 +41,18 @@
       <table width="100%">
         <tr>
           <td >
-            <a :href="'../../' + regression.branchImage" target="_blank">
-              <img :src="'../../' + regression.branchImage" >
+            <a :href="'regression.branchImage" target="_blank">
+              <img :src="'regression.branchImage" >
             </a>
           </td>
           <td >
-            <a :href="'../../' + regression.baseImage"  target="_blank" v-if="!regression.isNew">
-              <img :src="'../../' + regression.baseImage" >
+            <a :href="'regression.baseImage"  target="_blank" v-if="!regression.isNew">
+              <img :src="regression.baseImage" >
             </a>
           </td>
           <td>
-            <a :href="'../../' + regression.diffImage"  target="_blank" v-if="!regression.isNew">
-              <img :src="'../../' + regression.diffImage" >
+            <a :href="'regression.diffImage"  target="_blank" v-if="!regression.isNew">
+              <img :src="regression.diffImage" >
             </a>
           </td>
         </tr>
