--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <link href="vendor/roboto.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="vendor/twitchalerts.css" />
     <link rel="stylesheet" type="text/css" href="vendor/font-awesome-4.7.0/css/font-awesome.min.css" />
-    <link rel="stylesheet" href="vendor/flexboxgrid.min.css" type="text/css" >
+
+    <!-- this library breaks the scenes list padding -->
+    <!--<link rel="stylesheet" href="vendor/flexboxgrid.min.css" type="text/css" >-->
 
     <script src="bundles/renderer.js"></script>
   </head>
